--- a/service.html
+++ b/service.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Elpis, Elpis Portfolio, Portfolio, Gbolade Festus, Elpis Home">
+    <meta name="description" content="Full Stack Web Developer and Structural Designer">
+    <meta name="author" content="Elpis">
     <title>Elpis Portfolio | Service</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="service_style.css">
