--- a/work.html
+++ b/work.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="Elpis, Elpis Portfolio, Portfolio, Gbolade Festus, Elpis Home">
+    <meta name="description" content="Full Stack Web Developer and Structural Designer">
+    <meta name="author" content="Elpis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elpis Portfolio | Works</title>
     <link rel="stylesheet" href="style.css">
