--- a/index.html
+++ b/index.html
@@ -229,16 +229,16 @@
                             </div>
 
                             <div id="iframe-2" class="site-iframe">
-                                <iframe src="https://www.xvideos.com" scrolling="no" frameborder="0"></iframe>
+                                <iframe src="https://elpis-alpha.github.io/Tic-Tac-Toe/" scrolling="no" frameborder="0"></iframe>
                             </div>
 
                             <div id="iframe-3" class="site-iframe">
-                                <iframe src="../News Galaxy/Modern Flexbox/home.html" scrolling='no'
+                                <iframe src="https://elpis-alpha.github.io/My-A.I/" scrolling='no'
                                     frameborder="0"></iframe>
                             </div>
 
                             <div id="iframe-4" class="site-iframe">
-                                <iframe src="../News Galaxy/Traditional Model/home.html" allowfullscreen scrolling="no"
+                                <iframe src="https://elpis-alpha.github.io/Elpis-Works/" allowfullscreen scrolling="no"
                                     frameborder="0"></iframe>
                             </div>
 
@@ -256,9 +256,9 @@
                     <div class="my-works-list">
                         <ul>
                             <li id="frame-1">My Portfolio</li>
-                            <li id="frame-2">Welfare Continental</li>
-                            <li id="frame-3">The News Galaxy (New)</li>
-                            <li id="frame-4">The News Galaxy (Old)</li>
+                            <li id="frame-2">Tic Tac Toe</li>
+                            <li id="frame-3">My A.I</li>
+                            <li id="frame-4">Elpis Works</li>
                         </ul>
                     </div>
 
